@@ -8,7 +8,6 @@ import com.flink.platform.dao.mapper.WorkerMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.flink.platform.common.constants.Constant.HOST_IP;
 import static com.flink.platform.common.enums.WorkerStatus.FOLLOWER;
@@ -20,21 +19,16 @@ import static com.flink.platform.common.enums.WorkerStatus.LEADER;
 public class WorkerService extends ServiceImpl<WorkerMapper, Worker> {
 
     public Worker getCurWorkerIdAndRole() {
-        return getOne(
-                new QueryWrapper<Worker>()
-                        .lambda()
-                        .select(Worker::getId, Worker::getRole)
-                        .eq(Worker::getIp, HOST_IP)
-                        .last("LIMIT 1"));
+        return getOne(new QueryWrapper<Worker>()
+                .lambda()
+                .select(Worker::getId, Worker::getRole)
+                .eq(Worker::getIp, HOST_IP)
+                .last("LIMIT 1"));
     }
 
     public List<Worker> listActiveWorkersByIds(List<Long> ids) {
         List<Worker> workers =
-                list(
-                        new QueryWrapper<Worker>()
-                                .lambda()
-                                .in(Worker::getId, ids)
-                                .in(Worker::getRole, LEADER, FOLLOWER));
-        return workers.stream().filter(Worker::isActive).collect(Collectors.toList());
+                list(new QueryWrapper<Worker>().lambda().in(Worker::getId, ids).in(Worker::getRole, LEADER, FOLLOWER));
+        return workers.stream().filter(Worker::isActive).toList();
     }
 }
